setting a convinient name for site and a welcome  message

--- a/index.html
+++ b/index.html
@@ -5,9 +5,10 @@
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="./main.css">
-    <title>Planner</title>
+    <title>Goal Planner</title>
   </head>
   <body>
+    <h1>Welcome to yor goal planner </h1>
     <div id="root"></div>
     <script type="module" src="/src/main.jsx"></script>
   </body>
