--- a/index.html
+++ b/index.html
@@ -8,8 +8,8 @@
     <title>Goal Planner</title>
   </head>
   <body>
-    <h1>Welcome to yor goal planner </h1>
-    <div id="root"></div>
+    <h1><span> Welcome to yor goal planner!</span>  </h1>
+   <div id="root"></div>
     <script type="module" src="/src/main.jsx"></script>
   </body>
 </html>
