adding savings opperaation

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <title>Goal Planner</title>
   </head>
   <body>
-    <h1><span> Welcome to yor goal planner!</span>  </h1>
+    <h1><span> Welcome to your goal planner!</span>  </h1>
    <div id="root"></div>
     <script type="module" src="/src/main.jsx"></script>
   </body>
